fixed updated article
